font size font spacing on course details pages got changed, now corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5781,56 +5781,53 @@ img.width-100 {
 }
 
 .course-details-content h1,.course-details-content h2,.course-details-content h3,.course-details-content h4,.course-details-content h5,.course-details-content h6,.course-details-content table.table {
-  color: #404040;
-  margin: 0px 0px 3px 0;
+  color: #393185;
+  margin: 10px 0px;
 }
 .course-details-content h1 {
-  font-size: 30px;
-}
-.course-details-content h2 {
   font-size: 28px;
 }
-.course-details-content h3 {
+.course-details-content h2 {
   font-size: 25px;
 }
+.course-details-content h3 {
+  font-size: 23px;
+}
 .course-details-content h4 {
-  font-size: 22px;
+  font-size: 21px;
 }
 .course-details-content h5 {
-  font-size: 20px;
+  font-size: 19px;
 }
 .course-details-content h6 {
-  font-size: 18px;
+  font-size: 17px;
 }
-.course-details-content ul {
+.course-details-content ul, .course-details-content ol {
+  color: #444;
+  font-size: 16px;
   margin: 10px 0;
 }
-.course-details-content ol {
-  color: #333;
-  margin: 10px 0;
-}
-.course-single-text p {
-  margin: 0px 0px 15px 0;
-  color: #333333;
-  line-height: 20px;
+.course-details-content p {
+  margin: 10px 0px;
+  color: #444;
+  font-size: 16px;
 }
 .course-details-content .table thead th {
   font-weight: 600;
   font-size: 20px;
 }
 .course-details-content a {
-  color: #4c4ebf !important;
+  color: #393185!important;
   font-weight: 600;
 }
 .course-details-content ul li {
   display: block;
   list-style: disc;
-  color: #333;
+  color: #444;
   position: relative;
   padding-left: 12px;
-  margin-left: 15px;
+  margin: 0 0 10px 15px;
 }
-
 .course-details-content ul li::before {
   content: "";
   position: absolute;
@@ -5839,4 +5836,11 @@ img.width-100 {
   height: 7px;
   left: 0;
   top: 6px;
+}
+.course-details-content ol li {
+  display: block;
+  color: #444;
+  position: relative;
+  padding-left: 12px;
+  margin: 0 0 10px 15px;
 }
